--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,71 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-    <servlet>
-        <servlet-name>homePage</servlet-name>
-        <servlet-class>Controller.homePage</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>Controller.LoginServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateRoleServlet</servlet-name>
-        <servlet-class>Controller.UpdateRoleServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>RegisterServlet</servlet-name>
-        <servlet-class>Controller.RegisterServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>registerServlet</servlet-name>
-        <servlet-class>Controller.registerServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>AddCourseServlet</servlet-name>
-        <servlet-class>Controller.AddCourseServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>AddLecturesServlet</servlet-name>
-        <servlet-class>Controller.AddLecturesServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>AddAssignmentServlet</servlet-name>
-        <servlet-class>Controller.AddAssignmentServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>homePage</servlet-name>
-        <url-pattern>/homePage</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/loginServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateRoleServlet</servlet-name>
-        <url-pattern>/updateRoleServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>registerServlet</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AddCourseServlet</servlet-name>
-        <url-pattern>/addCourseServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AddLecturesServlet</servlet-name>
-        <url-pattern>/addLecturesServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AddAssignmentServlet</servlet-name>
-        <url-pattern>/addAssignmentServlet</url-pattern>
-    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>homePage</welcome-file>
+        <welcome-file>/home</welcome-file>
     </welcome-file-list>
 </web-app>
